--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "vitepress": "^0.13.0"
+    "vite-plugin-style-import": "^2.0.0",
+    "vitepress": "^0.22.4"
   },
   "scripts": {
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "serve": "vitepress serve docs"
+  },
+  "dependencies": {
+    "unreal-ui-next": "^1.4.10"
   }
 }
